[package]
name = "leetcode_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "3.0.10", features = [ "derive" ] }
graphql_client = { version = "0.10.0", features = [ "reqwest-blocking" ] }
serde = { version = "1.0.136" }
serde_json = { version = "1.0.78" }
reqwest = { version = "0.11.9", features = [ "blocking", "json" ] }
tokio = { version = "1.15.0", features = [ "full" ] }
