[package]
autobins = false
name = "leetcode_scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0" }
aws-config = { version = "0.6.0" }
clap = { version = "3.0.10", features = [ "derive" ] }
graphql_client = { version = "0.10.0", features = [ "reqwest-blocking" ] }
lambda_runtime = { version = "0.4.1" }
log = { version = "0.4.14" }
serde = { version = "1.0.136" }
serde_json = { version = "1.0.78" }
simple_logger = { version = "1.9.0" }
rand = { version = "0.8.4" }
reqwest = { version = "0.11.9", features = [ "blocking", "json" ] }
tokio = { version = "1.15.0", features = [ "full" ] }